...
      setIsAcceptingOrder(false);
    }
  };

  return (
    <View
      testID="store.order.prep-time.sheet"
      className="flex-1 items-center justify-center px-4 pb-20"
    >
      <View className="mt-4 mb-4 text-center flex-row justify-between items-center">
        <Text
          className="flex-1 text-center text-[16px] font-[600]"
          style={{ color: appTheme.fontMainColor }}
...
          ))}
        </View>
      </View>

      <View>
        <CustomContinueButton
          testID="store.order.prep-time.done"
          disabled={isSubmitting}
          isLoading={isSubmitting}
          style={{ backgroundColor: appTheme.primary }}
          onPress={onAcceptOrderHandler}
          title={t("Done")}
        />
...
