...
      )}
    </View>
  );

  return (
    <View
      testID="store.orders.processing.screen"
      className="pt-14 flex-1 items-center"
      style={[style.container, { backgroundColor: appTheme.themeBackground }]}
    >
      <CustomTab
        options={ORDER_DISPATCH_TYPE}
        selectedTab={currentTab}
...
